syntax = "proto3";

package admin_common;

service GrpcAdminCommonService {
  rpc CreateActionLog(CreateActionLog) returns (Result);
  rpc ListEvents(Empty) returns (ListEvents);
  rpc ListPropertiesByEvent(InputPropertiesByEvent) returns (ResultPropertiesByEvent);
  rpc ListGrantTarget(Empty) returns (ResultGrantTarget);
}

message ResultGrantTarget {
  string user = 1;
  string wallet = 2;
}

message InputPropertiesByEvent {
  string eventName = 1;
}

message ResultPropertiesByEvent {
  string list = 1;
}

message Empty {}

message ListEvents {
  string list = 1;
}

message CreateActionLog {
  int32 adminId = 1;
  string actionName = 2;
  string contentData = 3;
}

message Result {
    int32 adminId = 1;
    string actionName = 2;
    string contentData = 3;
    int32 createdAt = 4;
    int32 updatedAt = 5;
    int32 id = 6;
}
